--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,48 @@
 body {
 	font-family: sans-serif;
+/*	height: 100%;*/
+/*
+	display:flex;
+  align-items:  stretch;
+*/
+
 }
 
 #me {
 	box-sizing: border-box;
 	float: right;
 	width: 50%;
+	height: 500px;
 }
 
 #mytext {
-	min-height: 30px;
-	max-width: 60px;
+	min-height: 50px;
+	max-width: 90px;
+	border-radius: 8px;
 	float: none;
 	padding: 15px;
 	background-color: white;
 	position: relative;
-/*	box-sizing: border-box;*/
+	/*	box-sizing: border-box;*/
 	margin: 10px;
 	display: flex;
-	
-/*	flex-direction: start;*/
+	/*	flex-direction: start;*/
 	flex-wrap: nowrap;
-	
 }
-
 
 #otherText {
 	min-height: 30px;
-	max-width: 60px;
-	
+	max-width: 90px;
+	border-radius: 8px;
 	float: none;
 	padding: 15px;
 	background-color: goldenrod;
-
-/*	box-sizing: border-box;*/
+	/*	box-sizing: border-box;*/
 	margin: 10px;
 	margin-left: 70%;
-	display:block;
-	
-/*	flex-direction: row;*/
-/*	flex-wrap: nowrap;*/
-	
+	display: block;
+	/*	flex-direction: row;*/
+	/*	flex-wrap: nowrap;*/
 }
 
 .spanning {
@@ -53,30 +55,27 @@ body {
 	float: none;
 	padding: 15px;
 	background-color: white;
-	
 }
 
 header {
 	height: 60px;
 	background-color: goldenrod;
 	padding-top: 5px;
-	padding-left:15px;
-	
-	
+	padding-left: 15px;
 }
 
 #friend {
 	box-sizing: border-box;
 	width: 50%;
 	border-right: 5px solid white;
-	
+	height: 500px;
 }
 
 section {
-	height: 700px;
+	padding: 10px;
+	height: inherit;
 	background-color: lightgrey;
 	box-sizing: border-box;
-	
 }
 
 .texting {
@@ -84,20 +83,16 @@ section {
 	padding-left: 5px;
 	background-color: goldenrod;
 	height: 100px;
-	
 }
 
 input {
 	margin-top: 20px;
 	width: 80%;
-	height:50px;
-	
+	height: 50px;
 }
 
 button {
 	border-radius: 6px;
 	width: 10%;
-	
-	padding-top: 
+	padding-top:
 }
-
